--- a/src/app/components/card/card.component.css
+++ b/src/app/components/card/card.component.css
@@ -1,15 +1,22 @@
 .card-container{
-  border: 1px solid black;
+  background-image: linear-gradient(rgb(58, 0, 0),rgb(59, 59, 59));
   max-width: 300px;
   width: 100%;
   margin: 0 auto;
   display: flex;
   flex-direction: column;
   align-items: center;
+  color: white;
+  border-radius: 20px;
+  box-shadow: 5px 5px 5px 2px rgb(99, 99, 99);
 }
 .card-img{
-  border: 1px solid black;
-  padding: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: azure;
+  width: 150px;
+  border-radius: 20px;
 }
 .card-atributs{
   margin-right: 10px;
@@ -19,4 +26,17 @@
   display: flex;
   align-items: center;
   text-align: center;
+}
+.div-input{
+  max-width: 300px;
+  width: 100%;
+  margin: 0 auto;
+  color: white;
+}
+.div-input input{
+  border: 1px solid rgb(255, 255, 255);
+  padding: 5px;
+}
+.div-input input:focus{
+  outline: none;
 }
