--- a/src/app/components/card/card.component.html
+++ b/src/app/components/card/card.component.html
@@ -1,7 +1,11 @@
-<input type="text" (input)="getPokemon($any($event.target).value)">
+<div class="text-center div-input mt-5">
+  <label>Digite o nome do Pokemon:</label>
+  <input class=" mt-1 mb-5 " type="text" (input)="getPokemon($any($event.target).value)">
+
+</div>
 <div class="card-container">
   <div class="card-title">
-    <h3>{{pokemon?.name}}</h3>
+    <h3>{{pokemon?.name}} <hr></h3>
   </div>
   <div class="card-img">
     <img src="{{ pokemon?.sprites?.front_default }}" alt="pokemon">
@@ -12,6 +16,7 @@
     *ngFor="let t of pokemon?.types "
     >
       {{t.type.name}}
+      <hr>
     </span>
 
   </div>
